java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testInitializeVariable3.pass
package org.netbeans.test.java.hints;

/**
 * @author leon chiver
 */
public class InitializeVariable3 {
    
    public InitializeVariable3() {
        String[] str = null;
        int i = str.length;
    }
    
}
